# PyCIFTer

./: .gitignore  README.md  requirements.txt
PythonCode/: UPDATES.md  cifFileParser.py  index.py  playground.py  pyproject.toml
PythonCode/pycifter-package/src/pycifter/: atom.py  cifFileParser.py
PythonCode/src/pyCIFter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
