[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyCIFter"
version = "0.1.0"
description = "A tool for analyzing TFSI structures and metal binding properties."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "Tej Gumaste", email = "tej.gumaste@gmail.com"}
]
dependencies = [
    "numpy",
    "matplotlib",
    "xlsxwriter",
    "plotly",
    "pandas",
]

[tool.setuptools.packages.find]
where = ["src"]
